--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^0.22.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
-    "node": "^16.10.0"
+    "node": "^16.10.0",
+    "tslint": "^6.1.3"
   }
 }
