--- a/package.json
+++ b/package.json
@@ -1,9 +1,24 @@
 {
+  "scripts": {
+    "build": "tsc",
+    "start": "node build/client.js",
+    "dev": "ts-node src/client.ts"
+  },
   "dependencies": {
+    "@discordx/utilities": "^1.3.3",
     "axios": "^0.22.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
+    "husky": "^7.0.2",
     "node": "^16.10.0",
     "tslint": "^6.1.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "tslint": "^6.1.2",
+    "tslint-config-airbnb": "^5.11.2",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.3"
   }
 }
