--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "start": "node build/client.js",
     "dev": "ts-node src/client.ts"
   },
-  "type": "module",
   "dependencies": {
     "@discordx/utilities": "^1.3.3",
     "axios": "^0.22.0",
@@ -12,14 +11,15 @@
     "dotenv": "^10.0.0",
     "husky": "^7.0.2",
     "node": "^16.10.0",
-    "tslint": "^6.1.3"
+    "ts-node": "^10.2.1",
+    "tslint": "^5.11.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
-    "tslint": "^6.1.2",
-    "tslint-config-airbnb": "^5.11.2",
     "prettier": "^2.4.1",
+    "tslint": "^5.11.0",
+    "tslint-config-airbnb": "^5.11.2",
     "typescript": "^4.4.3"
   }
 }
